<resources>
    <string name="app_name">25_FoodApp</string>

    <string name="place">Place</string>
    <string name="food">Food</string>
    <string name="action_home">Home</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_receipt">Order</string>
    <string name="action_notification">Notification</string>
    <string name="action_account">Account</string>
    <string name="account_margin_left">12dp</string>
    <string name="account_item_height">56dp</string>
    <string name="action_cash">Thanh toán</string>
    <string name="action_history">Lịch sử</string>
    <string name="action_bill">Hóa đơn</string>
    <string name="action_cart">Giỏ Hàng</string>
    <string name="action_seller">Ứng dụng cho người bán</string>
    <string name="action_invite">Mời bạn bè</string>
    <string name="action_feedback">Góp ý</string>
    <string name="action_policy">Chính sách quy định</string>
    <string name="action_setting">Cài đặt ứng dụng</string>
    <string name="action_photo">Photo</string>
    <string name="action_check_in">Check-in</string>
    <string name="action_review">Review</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="nothing">Nothing to show now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>